5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1577_1334.log
== TEST (2019-04-11 18:39:37) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1...)

print("Multiplicacao: ", 4*2...)

print("Divisao: ",16/2 ...)

print("Resto: ",24/3 ...)

print("Potenciacao: ",8*8 ...)
-- ERROR:
File "XXXX", line 3
    print("Subtracao: ", 9-1...)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:39:54) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1...)

print("Multiplicacao: ", 4*2...)

print("Divisao: ",16/2 ...)

print("Resto: ",24/3 ...)

print("Potenciacao: ",8*8 ...)
-- EXECUTION TIME:
0.183116
-- ERROR:
  File "/home/codebench/codes/1577/1334/main.py", line 3
    print("Subtracao: ", 9-1...)
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:40:28) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",24/3)

print("Potenciacao: ",8*8 )
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:40:45) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",24/3)

print("Potenciacao: ",8*8 )
-- EXECUTION TIME:
0.188633
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  64
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:41:01) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",24/3)

print("Potenciacao: ",64/8)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:41:05) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",24/3)

print("Potenciacao: ",64/8)
-- EXECUTION TIME:
0.107389
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:41:27) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",24/3)

print("Potenciacao: ",64%)
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ",64%)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:41:37) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",24/3)

print("Potenciacao: ",64**)
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ",64**)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:42:30) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",24/3)

print("Potenciacao: ",2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:42:44) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",24/3)

print("Potenciacao: ",2*4)
-- EXECUTION TIME:
0.223576
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:42:50) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",24/3)

print("Potenciacao: ",2*4)
-- EXECUTION TIME:
0.234353
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:42:51) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",24/3)

print("Potenciacao: ",2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:43:12) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",24/2)

print("Potenciacao: ",2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  12.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:43:27) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",25/3)

print("Potenciacao: ",2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.333333333333334
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:44:11) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",24/3)

print("Potenciacao: ",2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:44:41) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",48/6)

print("Potenciacao: ",2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:44:48) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",48/6)

print("Potenciacao: ",2*4)
-- EXECUTION TIME:
0.181177
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:45:30) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",24*3)

print("Potenciacao: ",2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  72
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:45:44) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",72/3)

print("Potenciacao: ",2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  24.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:45:55) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",22/3)

print("Potenciacao: ",2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  7.333333333333333
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:46:11) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",16/3)

print("Potenciacao: ",2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  5.333333333333333
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:46:46) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",16/2)

print("Potenciacao: ",2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:46:55) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",16/2)

print("Potenciacao: ",2*4)
-- EXECUTION TIME:
0.161703
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:47:04) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",17/2)

print("Potenciacao: ",2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.5
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:47:36) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",40/5)

print("Potenciacao: ",2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:48:00) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",41/4)

print("Potenciacao: ",2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  10.25
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:48:22) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",16/2)

print("Potenciacao: ",2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:48:24) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",16/2)

print("Potenciacao: ",2*4)
-- EXECUTION TIME:
0.167529
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:49:06) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",16/2)

print("Potenciacao: ",2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:49:30) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",16%/2)

print("Potenciacao: ",2*4)
-- ERROR:
File "XXXX", line 9
    print("Resto: ",16%/2)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:49:35) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",16%2)

print("Potenciacao: ",2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:49:52) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",16//2)

print("Potenciacao: ",2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:50:21) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 4*2)

print("Divisao: ",16/2)

print("Resto: ",16//2)

print("Potenciacao: ",2*4)
-- EXECUTION TIME:
0.213636
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
